Add academic catalog management